--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -18,3 +18,69 @@ margin-top: 40px;
 color: white;
 
 }
+
+
+input{
+    border-radius: 1px solid #999999;
+    border-radius: 22px;
+    min-width: 250px;
+    width: 50%;
+    margin-right: 12px;
+    background: transparent;
+    font-size: 18px;
+    padding: 10px;
+    color: white;
+}
+
+
+button{
+    border-radius: 1px solid #999999;
+    border-radius: 22px;
+    min-width: 250px;
+    width: 10%;
+    margin-right: 12px;
+    background: #2d333b;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 10px;
+}
+
+.perfil{
+    display:flex;
+    margin: 40px 0;
+
+}
+
+.profile{
+    
+    width: 120px;
+    height: 120px;
+    border-radius:60px;
+    border:2px solid #e5e5e5;
+    margin-right: 32px;
+
+
+}
+
+.perfil h3{
+    color:#999999;
+    font-size: 24px;
+    margin: 0px;
+}
+
+.perfil span{
+    display: block;
+    color: #999999;
+        font-size: 12px;
+        margin: 0;
+
+
+}
+
+.perfil p{
+    display: block;
+    color: #999999;
+        font-size: 12px;
+        margin: 20px 0 0 0;
+
+}
