--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -12,7 +12,7 @@
 }
 
 .info{
-    width:60%;
+    width:40%;
 margin-left: 50%;
 margin-top: 40px;
 color: white;
@@ -83,4 +83,11 @@ button{
         font-size: 12px;
         margin: 20px 0 0 0;
 
+}
+
+.repositorio{
+    font-size: 32px;
+    color: #ffffff;
+    margin: 12px 0;
+    text-align: center;
 }
